public class Library {
    public static void main(String[] args) {
    }
}
